--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <!-- start header1 -->
 <header class="bg-light">
   <nav class="navbar navbar-expand-lg navbar-light bg-light" id="header-nav" role="navigation">
-    <div class="container"><a class="link-dark navbar-brand site-title mb-0" href="#">Mohamed Nour</a>
+    <div class="container"><a class="link-dark navbar-brand site-title mb-0" href="#">Mohamed Kamal</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto me-2">
@@ -55,7 +55,7 @@
 <!-- end header1 -->
 <!-- header -->
     <header class="page-header header container-fluid col-md-6 ddesc">
-        <h1> <span>HELLO!</span>  I’m Mohamed Nour</h1>
+        <h1> <span>HELLO!</span>  I’m Mohamed Kamal</h1>
         <p>Penetration Tester & Web Developer</p>
         <div class="social-nav" data-aos="fade-up" data-aos-delay="200">
             <nav role="navigation">
@@ -63,7 +63,7 @@
                 <li class="nav-item"><a class="nav-link" href="https://twitter.com" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a></li>
                 <li class="nav-item"><a class="nav-link" href="https://www.facebook.com" title="Facebook"><i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a></li>
                 <li class="nav-item"><a class="nav-link" href="https://www.instagram.com" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a></li>
-                <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/mohamed-nour-8165251a7/" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/mohamed-Kamal-8165251a7/" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
               </ul>
             </nav>
           </div>
@@ -77,7 +77,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="about-context">
-                        <h2>I’m Mohamed Nour</h2>
+                        <h2>I’m Mohamed Kamal</h2>
                         <p>Strong Hands-on Experienced in Web Application penetration testing, Network Infrastructure Penetration Testing.</p>
                         <p>Analytical, solutions-oriented Python software development professional with extensive experience driving complex, large-scale technical projects covering software/database/network development, product implementation, and technical support. Special expertise in assessing risk and translating innovative ideas into technology solutions.</p>
                     </div>
@@ -288,56 +288,56 @@
         </div>
         <div class="grid bp-gallery pb-3" data-aos="zoom-in-up" data-aos-delay="100">
           <div class="grid-sizer"></div>
-          <div class="grid-item"><a href="https://www.linkedin.com/in/mohamed-nour-8165251a7/">
+          <div class="grid-item"><a href="https://www.linkedin.com/in/mohamed-Kamal-8165251a7/">
               <figure class="portfolio-item"><img src="static/images/portfolio/2-small.png" data-bp="images/portfolio/1.jpg"/>
                 <figcaption>
                   <h4 class="h5 mb-0">Web Design</h4>
                   <div>Dribbble.com</div>
                 </figcaption>
               </figure></a></div>
-          <div class="grid-item"><a href="https://www.linkedin.com/in/mohamed-nour-8165251a7/">
+          <div class="grid-item"><a href="https://www.linkedin.com/in/mohamed-Kamal-8165251a7/">
               <figure class="portfolio-item"><img src="static/images/portfolio/2-small.png" data-bp="images/portfolio/2.jpg" data-caption="Example of an optional caption."/>
                 <figcaption> 
                   <h4 class="h5 mb-0">Web Development</h4>
                   <div>GitHub.com</div>
                 </figcaption>
               </figure></a></div>
-          <div class="grid-item"><a href="https://www.linkedin.com/in/mohamed-nour-8165251a7/">
+          <div class="grid-item"><a href="https://www.linkedin.com/in/mohamed-Kamal-8165251a7/">
               <figure class="portfolio-item"><img src="static/images/portfolio/1-small.png" data-bp="images/portfolio/3.jpg" data-caption="Example of an optional caption."/>
                 <figcaption> 
                   <h4 class="h5 mb-0">Audio Mixing</h4>
                   <div>Soundcloud.com</div>
                 </figcaption>
               </figure></a></div>
-          <div class="grid-item"><a href="https://www.linkedin.com/in/mohamed-nour-8165251a7/">
+          <div class="grid-item"><a href="https://www.linkedin.com/in/mohamed-Kamal-8165251a7/">
               <figure class="portfolio-item"><img src="static/images/portfolio/4-small.png" data-bp="images/portfolio/4.jpg"/>
                 <figcaption>
                   <h4 class="h5 mb-0">Video Editing</h4>
                   <div>Adobe After Effects</div>
                 </figcaption>
               </figure></a></div>
-          <div class="grid-item"><a href="https://www.linkedin.com/in/mohamed-nour-8165251a7/">
+          <div class="grid-item"><a href="https://www.linkedin.com/in/mohamed-Kamal-8165251a7/">
               <figure class="portfolio-item"><img src="static/images/portfolio/1-small.png" data-bp="images/portfolio/5.jpg"/>
                 <figcaption>
                   <h4 class="h5 mb-0">Photography</h4>
                   <div>Adobe Photoshop</div>
                 </figcaption>
               </figure></a></div>
-          <div class="grid-item"><a href="https://www.linkedin.com/in/mohamed-nour-8165251a7/">
+          <div class="grid-item"><a href="https://www.linkedin.com/in/mohamed-Kamal-8165251a7/">
               <figure class="portfolio-item"><img src="static/images/portfolio/6-small.png" data-bp="images/portfolio/6.jpg"/>
                 <figcaption>
                   <h4 class="h5 mb-0">App Development</h4>
                   <div>Android</div>
                 </figcaption>
               </figure></a></div>
-          <div class="grid-item"><a href="https://www.linkedin.com/in/mohamed-nour-8165251a7/">
+          <div class="grid-item"><a href="https://www.linkedin.com/in/mohamed-Kamal-8165251a7/">
               <figure class="portfolio-item"><img src="static/images/portfolio/7-small.png" data-bp="images/portfolio/7.jpg"/>
                 <figcaption>
                   <h4 class="h5 mb-0">App Design</h4>
                   <div>Flutter</div>
                 </figcaption>
               </figure></a></div>
-          <div class="grid-item"><a href="https://www.linkedin.com/in/mohamed-nour-8165251a7/">
+          <div class="grid-item"><a href="https://www.linkedin.com/in/mohamed-Kamal-8165251a7/">
               <figure class="portfolio-item"><img src="static/images/portfolio/8-small.png" data-bp="images/portfolio/8.jpg"/>
                 <figcaption>
                   <h4 class="h5 mb-0">App Development</h4>
@@ -479,7 +479,7 @@
     <footer class="pt-4 pb-4 text-center bg-light">
         <div class="container">
           <div class="my-3">
-            <div class="h4">Mohamed Nour</div>
+            <div class="h4">Mohamed Kamal</div>
             <p>Penetration Tester & Web Developer</p>
             <div class="social-nav">
               <nav role="navigation">
@@ -487,15 +487,15 @@
                   <li class="nav-item"><a class="nav-link" href="https://twitter.com" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a></li>
                   <li class="nav-item"><a class="nav-link" href="https://www.facebook.com" title="Facebook"><i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a></li>
                   <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/templateflip" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a></li>
-                  <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/mohamed-nour-8165251a7/" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
+                  <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/mohamed-Kamal-8165251a7/" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
                   <li class="nav-item"><a class="nav-link" href="https://www.behance.net" title="Behance"><i class="fab fa-behance"></i><span class="menu-title sr-only">Behance</span></a></li>
                 </ul>
               </nav>
             </div>
           </div>
           <div class="text-small text-secondary">
-            <div class="mb-1">&copy; All rights reserved to Nour.</div>
-            <div>Design -  <a href="https://www.linkedin.com/in/mohamed-nour-8165251a7/" target="_blank">Mohamed Nour</a></div>
+            <div class="mb-1">&copy; All rights reserved to Kamal.</div>
+            <div>Design -  <a href="https://www.linkedin.com/in/mohamed-Kamal-8165251a7/" target="_blank">Mohamed Kamal</a></div>
           </div>
         </div>
       </footer>
